--- a/admin_panel/templates/admin_panel/admin_panel.html
+++ b/admin_panel/templates/admin_panel/admin_panel.html
@@ -129,14 +129,30 @@
                     <button class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#delete-faq-modal-{{faq.id}}">Delete</button>
 
                     <!-- Edit FAQ Modal -->
-                    <div class="modal fade" id="edit-faq-modal-{{faq.id}}" tabindex="-1" aria-labelledby="edit-faq-modal-{{faq.id}}-label" aria-hidden="true">
+                    <div class="modal fade" id="edit-faq-modal-{{ faq.id }}" tabindex="-1" aria-labelledby="edit-faq-modal-{{ faq.id }}-label" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <form method="POST" action="{% url 'faq_crud' %}">
                                     {% csrf_token %}
                                     <input type="hidden" name="faq_id" value="{{ faq.id }}">
-                                    {{ faq_form.as_p }}
-                                    <button type="submit" name="update_faq" class="btn btn-dark">Update FAQ</button>
+                                    <div class="modal-header">
+                                        <h5 class="modal-title fs-5" id="edit-faq-modal-{{ faq.id }}-label">Edit FAQ</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="form-group">
+                                            <label for="faq-question-{{ faq.id }}">Question</label>
+                                            <input type="text" id="faq-question-{{ faq.id }}" name="question" class="form-control" value="{{ faq.question }}">
+                                        </div>
+                                        <div class="form-group mt-3">
+                                            <label for="faq-answer-{{ faq.id }}">Answer</label>
+                                            <textarea id="faq-answer-{{ faq.id }}" name="answer" class="form-control">{{ faq.answer }}</textarea>
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                        <button type="submit" name="update_faq" class="btn btn-dark">Update FAQ</button>
+                                    </div>
                                 </form>
                             </div>
                         </div>
