--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -13,18 +13,18 @@
 
 {% block content %}
 <div class="container my-5">
-    <h1 class="text-center">Frequently Asked Questions</h1>
+    <h1 class="bg-dark text-white text-center mb-3">Frequently Asked Questions</h1>
     <div class="accordion" id="faqAccordion">
         {% for faq in faqs %}
         <div class="card">
             <div class="card-header" id="heading{{ forloop.counter }}">
                 <h2 class="mb-0">
-                    <button class="btn btn-link btn-block text-left" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}" aria-expanded="true" aria-controls="collapse{{ forloop.counter }}">
+                    <button class="btn btn-link btn-block text-left text-black" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}" aria-expanded="true" aria-controls="collapse{{ forloop.counter }}">
                         {{ faq.question }}
                     </button>
                 </h2>
             </div>
-            <div id="collapse{{ forloop.counter }}" class="collapse" aria-labelledby="heading{{ forloop.counter }}" data-bs-parent="#faqAccordion">
+            <div id="collapse{{ forloop.counter }}" class="collapse bg-dark text-white" aria-labelledby="heading{{ forloop.counter }}" data-bs-parent="#faqAccordion">
                 <div class="card-body">
                     {{ faq.answer }}
                 </div>
